# odyn

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  LICENSE-MIT  MORE.md  README.md  build.rs  index.html  install.ps1  install.sh  sitemap.xml
.forgejo/workflows/: deploy.yml  release.yml
.github/workflows/: release.yml
assets/css/: styles.a7b20227.css
assets/js/: 01a85c17.39e0be41.js  072828bf.e4ebbbe4.js  0e384e19.2d7db821.js  10f1cdc8.4b60b802.js  17896441.3927736c.js  1df93b7f.d39a31d3.js  1ec14475.46930329.js  21acac87.55337e3f.js  2ab5b777.7dc6e629.js  3106374b.f0ca540d.js  33fc5bb8.11118bf9.js  3933e37d.8bc1c717.js  43959c21.cdd6cf6e.js  45a5cd1f.b7805963.js  5158.4b162281.js  59362658.188d2f7b.js  67f99e56.ebe28ad3.js  6875c492.50ae40fd.js  6a16d2ca.58e05156.js  73664a40.6c4e1c3c.js  7661071f.bf9a9e6a.js  8146333c.750107b8.js  814f3328.daa418b3.js  8717b14a.eb03326c.js  87b0e926.8df899d9.js  925b3f96.7fe80bc9.js  9785.5fd222fa.js  9a6b0ee8.8aec26c8.js  9b577d45.65bc3eb9.js  9e4087bc.9e13c8cb.js  a6aa9e1f.cf2a7ba1.js  a94703ab.591b7533.js  ac391259.9d3d6405.js  acecf23e.3b1eede8.js  bff9f495.5b22c196.js  ccc49370.a24e8432.js  cf3aa993.5f70557a.js  d589d3a7.17e94699.js  d9f32620.8e59633c.js  e273c56f.b6f11d57.js  (+6 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/authors/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
docs/: docusaurus.config.ts  package-lock.json
docs/docs/: faq.mdx  (+7 more)
src/: commands.rs  constants.rs  main.rs  storage.rs  ui.rs
(+47 files in other folders)
