[package]
name = "odyn"
version = "0.1.0"
edition = "2024"
description = "Reproducible vendoring for Odin. Not a package manager."
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/razkar/odyn"
homepage = "https://codeberg.org/razkar/odyn"
keywords = ["odin", "vendoring", "dependency", "lockfile"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
farben = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.0"
